--- a/WebshopFrontend/Razor/Components/CartIcon.razor
+++ b/WebshopFrontend/Razor/Components/CartIcon.razor
@@ -1,8 +1,8 @@
 ﻿@inject ICounterService CounterService
 
 <NavLink href="checkout" class="text-gray">
-    <div class="cart">
-        <i class="fa badge fa-lg" style="font-size: 24px;" value="@_noOfItemsInCart">&#xf07a;</i>
+    <div class="hover-to-black">
+        <i class="fa cart-badge fa-lg" style="font-size: 24px;" value="@_noOfItemsInCart">&#xf07a;</i>
     </div>
 </NavLink>
 
