--- a/WebshopFrontend/Razor/Components/PageHeading.razor
+++ b/WebshopFrontend/Razor/Components/PageHeading.razor
@@ -1,4 +1,4 @@
-﻿<div class="page-heading-container white border padding-x padding-y">
+﻿<div class="width-100 white border padding-x padding-y">
     <h1>@ChildContent</h1>
 </div>
 
