--- a/WebshopFrontend/Razor/Components/UserDetailsForm.razor
+++ b/WebshopFrontend/Razor/Components/UserDetailsForm.razor
@@ -3,7 +3,7 @@
 <div class="white border padding-x padding-y">
     <EditForm Model="UserDetails" OnValidSubmit="Submit" FormName="UserDetails">
         <ObjectGraphDataAnnotationsValidator />
-        <div class="form-flex-container">
+        <div class="form-flex-container white">
 
             <div class="form-flex-row">
                 <div class="form-flex-item">
