--- a/WebshopFrontend/Razor/Layout/NavMenu.razor
+++ b/WebshopFrontend/Razor/Layout/NavMenu.razor
@@ -1,8 +1,8 @@
 ﻿<nav class="nav-menu">
     @if (SideBarShown)
     {
-        <div class="nav-menu-close padding-x padding-y">
-            <i class="fa fa-times nav-menu-close-button" aria-hidden="true" @onclick="OnHideSideBar"></i>
+        <div class="nav-menu-close padding-x padding-y ">
+            <i class="fa fa-times hover-to-black" aria-hidden="true" @onclick="OnHideSideBar"></i>
         </div>
     }
 
