--- a/WebshopFrontend/Razor/Layout/TopMenu.razor
+++ b/WebshopFrontend/Razor/Layout/TopMenu.razor
@@ -4,18 +4,14 @@
     </div>
 
     <div class="top-menu-search padding-x">
-        
+        SEARCH
     </div>
-    
-    
         <ExchangeRateSelector/>
-    
-
     <div class="padding-x">
         <CartIcon></CartIcon>
     </div>
 
-    <div class="top-menu-menu text-gray padding-x">
+    <div class="top-menu-menu text-gray padding-x hover-to-black">
         <a @onclick="OnShowSidebar">
             <div>
                 <i class="fa fa-bars" aria-hidden="true"></i>
