--- a/WebshopFrontend/Razor/Pages/Product/BoardgameProperties.razor
+++ b/WebshopFrontend/Razor/Pages/Product/BoardgameProperties.razor
@@ -1,4 +1,4 @@
-﻿<div class="game-properties padding-y">
+﻿<div class="boardgame-properties padding-y">
     <div>
         <i class="fa fa-users" aria-hidden="true"></i>
         <span>@Boardgame.MinPlayers - @Boardgame.MaxPlayers Players</span>
