--- a/WebshopFrontend/Razor/Components/AddToCartButton.razor
+++ b/WebshopFrontend/Razor/Components/AddToCartButton.razor
@@ -26,8 +26,8 @@
 
     private string GetButtonClasses()
     {
-        const string defaultClasses = "text-center text-xlarge text-bold button-block";
-        var addedClass = Product.Stock.Quantity > 0 ? " button-buy" : " button-reserve";
+        const string defaultClasses = "text-center text-xlarge text-bold button-cart";
+        var addedClass = Product.Stock.Quantity > 0 ? " button-color-green" : " button-color-yellow";
 
         return defaultClasses + addedClass;
     }
