--- a/WebshopFrontend/Razor/Pages/Checkout/Checkout.razor.css
+++ b/WebshopFrontend/Razor/Pages/Checkout/Checkout.razor.css
@@ -1,15 +1,14 @@
-﻿.no-items-in-cart {
+﻿.button-denied {
     background-color: red;
 }
 
-    .no-items-in-cart:active {
-
-        animation-name: emptycart;
+    .button-denied:active {
+        animation-name: denied;
         animation-duration: 0.5s;
     }
 
 
-@keyframes emptycart {
+@keyframes denied {
     0% {
         background-color: rgb(56, 160, 56);
     }
