FIxed some html validations

--- a/WebshopFrontend/Razor/App.razor
+++ b/WebshopFrontend/Razor/App.razor
@@ -4,14 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webshop</title>
     <base href="/" />
-    @* <link rel="stylesheet" href="@Assets["app.css"]" /> *@
-    <link rel="stylesheet" href="@Assets["css/reset.css"]" />
     <link rel="stylesheet" href="@Assets["css/elements.css"]" />
     <link rel="stylesheet" href="@Assets["css/general.css"]" />
     <link rel="stylesheet" href="@Assets["css/specific.css"]" />
-    <link rel="stylesheet" href="@Assets["css/responsive.css"]" />
+    <link rel="stylesheet" href="@Assets["css/productgrid.css"]" />
     <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="@Assets["WebshopFrontend.styles.css"]" />
     <ImportMap />
