--- a/WebshopFrontend/Razor/Layout/TopMenu.razor
+++ b/WebshopFrontend/Razor/Layout/TopMenu.razor
@@ -6,8 +6,10 @@
     <div class="top-menu-search padding-x">
         SEARCH
     </div>
-        <ExchangeRateSelector/>
-    <div class="padding-x">
+
+    <ExchangeRateSelector/>
+
+    <div class="padding-x align-children-center">
         <CartIcon></CartIcon>
     </div>
 
