--- a/WebshopFrontend/Razor/Components/NavMenuButton.razor
+++ b/WebshopFrontend/Razor/Components/NavMenuButton.razor
@@ -1,5 +1,5 @@
-﻿<NavLink class="white text-gray" href="@Href">
-    <div class="nav-menu-item text-large border hover-to-black-bg">
+﻿<NavLink class="text-gray hover-to-black-bg" href="@Href">
+    <div class="nav-menu-item text-large border ">
         <div class="flex-row">
             <div class="padding-x nav-menu-icon">
                 <i class="@Icon" aria-hidden="true"></i>
