--- a/WebshopFrontend/wwwroot/css/elements.css
+++ b/WebshopFrontend/wwwroot/css/elements.css
@@ -1,10 +1,10 @@
-﻿* {
+* {
     box-sizing: border-box;
     margin: 0;
 }
 
 html {
-    
+
     height: 100%;
     min-height: 100%;
 }
@@ -49,4 +49,18 @@ a {
 hr {
     border: 1px solid #ededed;
     border-radius: 5px;
+}
+
+@media (min-width: 993px) {
+    header {
+        position: static;
+    }
+
+    .overlay {
+        padding-left: 200px;
+    }
+    .overlay img {
+        width: 80%;
+
+    }
 }
