--- a/WebshopFrontend/wwwroot/css/specific.css
+++ b/WebshopFrontend/wwwroot/css/specific.css
@@ -1,5 +1,111 @@
-﻿.active {
-    color: black;
+.button-cart {
+    width: 100%;
+    display: block;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 2px;
+    border: 0;
+}
+
+.button-cart-table {
+    background: white;
+    color: gray;
+    border: none;
+    transition: 0.1s;
+}
+
+    .button-cart-table:hover {
+        color: black;
+        cursor: pointer;
+        background: #d9d9d9;
+        border-radius: 20%;
+    }
+
+.button-color-green {
+    background-color: rgb(76, 180, 76);
+    color: white;
+}
+
+.button-color-green:hover {
+    background-color: rgb(56, 160, 56);
+}
+
+.button-color-yellow {
+    background-color: rgb(255, 165, 0);
+    color: white;
+}
+
+.button-color-yellow:hover {
+    background-color: rgb(255, 145, 0);
+}
+
+.cart-badge {
+    padding: 2px 5px 2px 5px;
+}
+
+.exchange-rate-selector {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin-right: 30px;
+    align-items: center
+}
+
+.exchange-rate-selector select {
+    height: 25px;
+}
+
+.form-flex-container {
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-flex-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-bottom: 8px;
+}
+
+.form-flex-item {
+    flex-basis: 100%;
+    max-width: 100%;
+}
+
+.login-box {
+    max-width: 250px;
+}
+
+.nav-menu {
+    display: block;
+    overflow: hidden;
+}
+
+.nav-menu-close {
+    display: flex;
+    justify-content: end;
+}
+
+.nav-menu-close i {
+    color: gray;
+    font-size: 30px;
+    font-weight: bold;
+    align-self: end;
+    cursor: pointer;
+}
+
+.nav-menu-item {
+    width: 250px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.nav-menu-icon {
+    width: 37px;
 }
 
 .overlay {
@@ -40,6 +146,31 @@
         cursor: pointer;
     }
 
+.root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.product-flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.product-flex-item {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    max-width: 100%;
+}
+
+.product-preview-bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .product-table-container {
     overflow-x: hidden;
 }
@@ -69,20 +200,54 @@
     border-bottom: 1px solid #d9d9d9;
 }
 
-[class^="product-grid-item"] {
-    background: white;
+.sidebar {
+    width: 250px;
+    display: none;
+    overflow: auto;
+    position: fixed;
+    flex-shrink: 0;
+    z-index: 3;
+    top: 81px;
 }
 
-.input-text {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+.topbar-top {
+    height: 32px;
+}
+
+.topbar-bottom {
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.top-menu {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.top-menu-menu {
+    display: flex;
+    align-items: center;
+}
+
+.top-menu-search {
+    flex-grow: 1;
+    position: relative;
+}
+
+@media (min-width: 420px) {
+    .product-flex-item {
+        flex-basis: 50%;
+        max-width: 50%;
+    }
 }
 
 @media screen and (max-width: 600px) {
 
-    table thead {
+    .product-table thead {
         clip: rect(0 0 0 0);
         height: 1px;
         margin: -1px;
@@ -91,20 +256,64 @@
         width: 1px;
     }
 
-    table tr {
+    .product-table tr {
         border-bottom: 3px solid #ddd;
         display: block;
     }
 
-    table td {
+    .product-table td {
         display: block;
         padding-left: 8px;
         text-align: right;
     }
 
-    table td::before {
+    .product-table td::before {
         content: attr(data-label);
         float: left;
         font-weight: bold;
+    }
+}
+
+@media (min-width: 768px) {
+    .form-flex-row {
+        flex-direction: row;
+    }
+
+    .form-flex-item {
+        flex-basis: 33%;
+        max-width: 33%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-right: 8px;
+    }
+
+    .form-flex-item:nth-child(1) {
+        flex-basis: 15%;
+        max-width: 15%;
+    }
+
+    .product-flex-item {
+        flex-basis: 33.333%;
+        max-width: 33.333%;
+    }
+}
+
+@media (min-width: 993px) {
+    .sidebar {
+        display: block;
+        position: sticky;
+        top: 0;
+    }
+
+    .top-menu-menu {
+        display: none;
+    }
+}
+
+@media (min-width: 1200px) {
+    .product-flex-item {
+        flex-basis: 25%;
+        max-width: 25%;
     }
 }
